--- a/src/reloadHtml.html
+++ b/src/reloadHtml.html
@@ -6,9 +6,11 @@
   <body>
     <h1>Express Sample Test</h1>
     <h2>With <code>"express"</code> npm package</h2>
-    <form action="/upload" enctype="multipart/form-data" method="post">
-      <div>Text field title: <input type="text" name="title" /></div>
-      <div>File: <input type="file" name="someExpressFiles" multiple="multiple" /></div>
+    <form action="/images" enctype="multipart/form-data" method="post">
+      <div>Url: <input type="text" name="url" /></div>
+      <div>File: <input type="file" name="image" multiple="multiple" /></div>
+      <div>Label: <input type="text" name="label" /></div>
+      <div>Analyze: <input type="checkbox" name="analyze" value="true" checked></div>
       <input type="submit" value="Upload" />
     </form>
     <!-- All you have to do is include the reload script and have it be on every page of your project -->
