4: finishing up base functionality

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>Reload Express Sample App</title>
+    <title>HEB Image Object Detection</title>
   </head>
   <body>
-    <h1>Express Sample Test</h1>
-    <h2>With <code>"express"</code> npm package</h2>
+    <h1>HEB Image Object Detection</h1>
     <form action="/images" enctype="multipart/form-data" method="post">
       <div>Url: <input type="text" name="url" /></div>
       <div>File: <input type="file" name="image" multiple="multiple" /></div>
