--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <h1>HEB Image Object Detection</h1>
     <form action="/images" enctype="multipart/form-data" method="post">
       <div>Url: <input type="text" name="url" /></div>
-      <div>File: <input type="file" name="image" multiple="multiple" /></div>
+      <div>File: <input type="file" name="file" multiple="multiple" /></div>
       <div>Label: <input type="text" name="label" /></div>
       <div>Analyze: <input type="checkbox" name="analyze" value="true" checked></div>
       <input type="submit" value="Upload" />
